# pytorch-hessian-eigenthings

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml
.claude/: settings.json
.claude/hooks/: check-docs-affected.sh  check_docs_affected.py
.github/workflows/: ci.yml  docs.yml
concepts/fused-ce-hvp/: index.html
concepts/ggn-vs-fisher-vs-hessian/: index.html
concepts/numerical-stability/: index.html
concepts/spectral-density/: index.html
concepts/top-k-eigenvalues/: index.html
concepts/trace-estimation/: index.html
concepts/what-is-the-hessian/: index.html
concepts/why-hvp-not-full-h/: index.html
docs/: index.md
docs/concepts/: fused-ce-hvp.md  ggn-vs-fisher-vs-hessian.md  numerical-stability.md  spectral-density.md  top-k-eigenvalues.md  trace-estimation.md  what-is-the-hessian.md  why-hvp-not-full-h.md
docs/getting-started/: installation.md  quickstart.md  transformers-quickstart.md
docs/how-to/: analyze-a-huggingface-model.md  analyze-with-transformer-lens.md  custom-curvature-operators.md  custom-loss-functions.md  distributed-ddp.md  per-layer-hessian.md
docs/reference/: algorithms.md  api.md  loss_fns.md  operators.md  param_utils.md
example/: main.py  tracking_example.py
examples/: README.md  huggingface_tiny_gpt2.py  supervised_mlp.py  transformer_lens_attention_only.py
getting-started/installation/: index.html
getting-started/quickstart/: index.html
getting-started/transformers-quickstart/: index.html
hessian_eigenthings/: __init__.py  batching.py  hvp_operator.py  lanczos.py  operator.py  param_utils.py  power_iter.py  spectral_density.py  stochastic_lanczos.py  tracking.py  utils.py
hessian_eigenthings/algorithms/: __init__.py  lanczos.py  power_iteration.py  result.py  spectral_density.py  trace.py
hessian_eigenthings/linalg/: __init__.py  backend.py
hessian_eigenthings/loss_fns/: __init__.py  _fused_ce_hvp.py  huggingface.py  standard.py  transformer_lens.py
hessian_eigenthings/operators/: __init__.py  base.py  fisher.py  ggn.py  hessian.py
how-to/analyze-a-huggingface-model/: index.html
how-to/analyze-with-transformer-lens/: index.html
how-to/custom-curvature-operators/: index.html
how-to/custom-loss-functions/: index.html
how-to/distributed-ddp/: index.html
how-to/per-layer-hessian/: index.html
reference/algorithms/: index.html
reference/api/: index.html
scripts/: bench_fused_ce_hvp.py  gpu_validate.sh  gpu_validate_fused.sh  repro_ggn_oom.py
search/: search_index.json
tests/: conftest.py  density_tests.py  lanczos_tests.py  power_iter_tests.py  principle_eigenvec_tests.py  random_matrix_tests.py  spectral_density_tests.py  test_analytic_hessian.py  test_batching.py  test_ddp_hessian.py  test_eigendecomp_on_hessian.py  test_fisher_operator.py  test_fused_ce_hvp.py  test_ggn_matvec.py  test_ggn_matvec_a100.py  test_ggn_operator.py  test_hessian_finite_difference.py  test_hessian_operator.py  test_lanczos_random_matrix.py  test_large_n_memory.py  test_linalg_backend.py  test_loss_fns.py  test_param_utils.py  test_power_iteration_random_matrix.py  test_smoke.py  test_spectral_density.py  test_trace.py  utils.py  variance_tests.py
(+6 files in other folders)
