[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hessian-eigenthings"
version = "1.0.0a5"
description = "Iterative eigendecomposition of curvature operators (Hessian, GGN, Fisher) for PyTorch models."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Noah Golmant" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.3",
    "numpy>=1.24",
    "scipy>=1.11",
    "tqdm>=4.65",
]

[project.optional-dependencies]
transformers = ["transformers>=4.40", "datasets>=2.14"]
transformer-lens = ["transformer-lens>=2.0"]
curvlinops = ["curvlinops-for-pytorch>=3.0"]
pyhessian = ["pyhessian>=0.1"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-markdown-docs>=0.6",
    "ruff>=0.6",
    "black>=24.0",
    "mypy>=1.10",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
    "pymdown-extensions>=10.0",
    "mkdocs-jupyter>=0.25",
]

[project.urls]
Homepage = "https://github.com/noahgolmant/pytorch-hessian-eigenthings"
Documentation = "https://noahgolmant.github.io/pytorch-hessian-eigenthings"
Issues = "https://github.com/noahgolmant/pytorch-hessian-eigenthings/issues"

[tool.hatch.build.targets.wheel]
packages = ["hessian_eigenthings"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# ML conventions: N803/N806 (uppercase vars like B, T, H, N), N812
# (import torch.nn.functional as F). Allowed in tests, scripts, examples.
"tests/*" = ["D", "N803", "N806", "N812"]
"scripts/*" = ["D", "N803", "N806", "N812"]
"examples/*" = ["D"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
files = ["hessian_eigenthings"]

[[tool.mypy.overrides]]
module = ["scipy.*", "tqdm.*", "curvlinops.*", "transformer_lens.*", "transformers.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "curvlinops: requires curvlinops-for-pytorch",
    "pyhessian: requires pyhessian",
    "transformers: requires huggingface transformers",
    "transformer_lens: requires transformer_lens",
    "gpu: requires CUDA",
    "distributed: requires multiple ranks",
    "skip_docs: docs code block that requires resources unavailable in CI",
]

[tool.coverage.run]
source = ["hessian_eigenthings"]
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
